fix(deployment): resolve CORS patterns and frontend base URL protocol handling for Vercel and Railway